<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.jokes.screens.jokeoptions.JokeOptionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/no_dp"
            android:layout_height="@dimen/no_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/in_joke_options_top_menu"
            app:srcCompat="@drawable/bg_main"
            android:scaleType="fitStart"
            android:importantForAccessibility="no"
            />

        <include
            android:id="@+id/in_joke_options_top_menu"
            layout="@layout/top_menu_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_joke_options_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/in_joke_options_top_menu"
            android:layout_marginTop="@dimen/space_150dp"
            android:layout_marginStart="@dimen/app_outside_margin"
            app:layout_constraintHorizontal_bias="0"
            android:textSize="@dimen/text_app_title"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:textColor="@color/text_color_primary"
            />

        <TextView
            android:id="@+id/tv_joke_options_subtitle"
            android:layout_width="@dimen/no_dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_joke_options_title"
            app:layout_constraintEnd_toEndOf="@id/tv_joke_options_title"
            app:layout_constraintTop_toBottomOf="@id/tv_joke_options_title"
            android:text="@string/app_subtitle"
            android:textSize="@dimen/text_app_subtitle"
            android:textColor="@color/text_color_secondary"
            android:textStyle="normal"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_joke_options_random_joke"
            android:layout_width="@dimen/no_dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_joke_options_subtitle"
            android:layout_margin="@dimen/app_outside_margin"
            app:contentPadding="@dimen/space_10dp"
            >

            <include
                android:id="@+id/in_joke_options_random_joke_content"
                layout="@layout/random_joke_content"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_joke_options_other_list_options"
            android:layout_width="@dimen/no_dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cv_joke_options_random_joke"
            app:layout_constraintEnd_toEndOf="@id/cv_joke_options_random_joke"
            app:layout_constraintTop_toBottomOf="@id/cv_joke_options_random_joke"
            android:layout_marginTop="@dimen/space_5dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_joke_options_options_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/menu_item"
                tools:itemCount="2"
                />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_joke_options_search_layout"
            android:layout_width="@dimen/no_dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cv_joke_options_random_joke"
            app:layout_constraintEnd_toEndOf="@id/cv_joke_options_random_joke"
            app:layout_constraintTop_toBottomOf="@id/cv_joke_options_other_list_options"
            android:layout_marginTop="@dimen/space_5dp"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconTint="@color/text_color_primary"

            app:endIconMode="custom"
            app:endIconContentDescription="@string/content_description_search_icon"
            app:errorEnabled="true"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_joke_options_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_field_hint"
            android:maxLines="1"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:digits="@string/text_input_field_allowed_digits"
            />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>